fine tuning the straight calculation